--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../photos/Affridi.jpg" class="card-img-top" alt="...">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRr4Ea0VZjLFmH74C_TG0o4SkK4EbWC9FYLBQ&usqp=CAU" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">BOOM BOOM</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
